# timezone-rocks

./: .babelrc  .gitignore  LICENSE  README.md  TODO.md  biome.json  bun.lockb  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts  webpack.config.ts
.github/workflows/: _test-e2e.yml  deploy.yml  main.yml  publish-production.yml  recuring-live-test.yml
crates/search-location/: Cargo.toml
crates/search-location/src/: lib.rs  search_engine.rs
crates/search-location/src/search_engine/: jaro_winkler_similarity.rs  mod.rs  prefix.rs
scripts/: build.ts
src/: Html.tsx  array-utils.ts  assets.d.ts  emojiFlagSequence.tsx  index-avatar.tsx  index.ts  intl-utils.ts  math-utils.ts  timezone.tsx  utils-array.ts  utils-arraybuffer.ts  utils-intl.ts  utils.ts
src/App/: App.tsx  CheapAvatar.tsx  DatePicker.tsx  Earth.tsx  Search.tsx  useLocationList.ts  useLocationStore.ts  useSearchLocation.ts
src/__tests__/: getFlagEmoji.spec.ts  ical.spec.ts  interval.spec.ts  prefix.spec.ts  timezone.spec.ts
src/assets/: _headers  locations.csv  manifest.json
src/debug/: generateModel.ts  getBoxDistance.ts
src/hooks/: useClickOutside.ts  useClipboardCopy.ts  useDateNow.ts  useDecayedValue.ts  useMemoizeValue.ts  usePreviousUntilTruthy.ts  useShare.ts
src/locations/: README.md  api.ts  generate.ts  getLocations.ts  index.ts  prefix-utils.ts  prefix.utils.ts  search.ts  wasm-index.ts  wasm-worker.ts  worker.ts
src/service-worker/: service-worker.ts
src/sun-data/: generate-sun-rise-data-for-location0.ts  sun-rise-cached.ts  sun-rise.ts
(+84 files in other folders)
