[package]
name = "search-location"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
js-sys = "0.3.27"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.29"
futures = "0.3"
csv = "1.1"
anyhow = "1.0.56"
unidecode = "0.3.0"
regex = "1.3.3"


[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
lto = true
overflow-checks = false
